Update article images to use random placeholders and enhance footer copyright year

--- a/templates/main/show.html.twig
+++ b/templates/main/show.html.twig
@@ -11,10 +11,10 @@ Detail - {{ parent() }}
 <div class="card text-bg-dark text-center">
     <img src="{{articles[id].image}}" class="card-img" alt="{{articles[id].titre}}">
     <div class="card-img-overlay">
-        <h5 class="card-title">{{articles[id].titre}}</h5>
-        <p class="card-text">{{articles[id].contenu}}</p>
-        <p class="card-text"><small>Auteur : {{articles[id].auteur}}</small></p>
-        <p class="card-text"><small>Publié le : {{articles[id].date}}</small></p>
+        <h5 class="card-title bg-dark-subtle">{{articles[id].titre}}</h5>
+        <p class="card-text bg-dark-subtle">{{articles[id].contenu}}</p>
+        <p class="card-text bg-dark-subtle"><small>Auteur : {{articles[id].auteur|upper}}</small></p>
+        <p class="card-text bg-dark-subtle"><small>Publié le : {{articles[id].date}}</small></p>
     </div>
 </div>
 
