--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -27,7 +27,7 @@
                 </div>
             </section>
             <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-                © 2024 Copyright:
+                © {{"now"|date('Y')}} Copyright:
             </div>
         </footer>
 
