--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -10,15 +10,15 @@
                 <a class="nav-link active" aria-current="page" href="{{path('app_main')}}">Home</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">About Us</a>
+                <a class="nav-link" href="{{path('app_about')}}">About Us</a>
                 </li>
                 <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Dropdown
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Service</a></li>
-                    <li><a class="dropdown-item" href="#">Contact</a></li>
+                    <li><a class="dropdown-item" href="{{path('app_service')}}">Service</a></li>
+                    <li><a class="dropdown-item" href="{{path('app_contact')}}">Contact</a></li>
                 </ul>
                 </li>
             </ul>
