Refactor MainController to remove hardcoded articles and utilize ArticleRepository for dynamic article retrieval; update card template to fix property name for article description.

--- a/templates/partials/_card.html.twig
+++ b/templates/partials/_card.html.twig
@@ -4,7 +4,7 @@
         <img src={{article.image}} class="card-img-top" alt="...">
             <div class="card-body">
             <h5 class="card-title">{{article.titre}}</h5>
-            <p class="card-text">{{article.description_courte}}</p>
+            <p class="card-text">{{article.descriptionCourte}}</p>
             <a href="{{path('app_main_show', {'id': article.id})}}" class="btn btn-primary">Lire la suite</a>
         </div>
     </div>
