Refactor AuteurController and templates: update index view for author listing, create show view for author details, and add navigation link for authors.

--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -19,6 +19,7 @@
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="{{path('app_service')}}">Service</a></li>
                     <li><a class="dropdown-item" href="{{path('app_contact')}}">Contact</a></li>
+                    <li><a class="dropdown-item" href="{{path('app_auteur')}}">Auteurs</a></li>
                 </ul>
                 </li>
             </ul>
