--- a/templates/auteur/index.html.twig
+++ b/templates/auteur/index.html.twig
@@ -5,26 +5,18 @@ Detail - {{ parent() }}
 {% endblock %}
 
 {% block body %}
-    <div class="container py-5">
-        <div class="row justify-content-center">
-            <div class="col-auto">
-                
-                <div class="card shadow-sm" style="max-width: 300px;">
-                    <div class="card-body text-center p-4">
-                        <img src="https://ui-avatars.com/api/?name=Sophie+Martin&size=100&background=0d6efd&color=fff&bold=true" 
-                                class="rounded-circle mb-3" 
-                                alt="Photo de profil"
-                                width="100" 
-                                height="100">
-                        
-                        <h5 class="card-title mb-1">{{ auteur.nom }}</h5>
-                        <p class="text-muted mb-0">
-                            <i class="bi bi-geo-alt-fill me-1"></i>{{ auteur.pays }}
-                        </p>
-                    </div>
-                </div>
-                
-            </div>
-        </div>
-    </div>
+
+<h1>Liste des auteurs</h1>
+
+    <ul>
+        {% for auteur in auteurs %}
+            <li>
+                <a href="{{ path('app_auteur_show', {'id': auteur.id}) }}">
+                    {{ auteur.nom }} {{ auteur.prenom }}
+                </a>
+            </li>
+        {% else %}
+            <li>Aucun auteur trouvé.</li>
+        {% endfor %}
+    </ul>
 {% endblock %}
