--- a/templates/auteur/show.html.twig
+++ b/templates/auteur/show.html.twig
@@ -15,10 +15,10 @@ Detail - {{ parent() }}
                         <img src="https://ui-avatars.com/api/?name=Sophie+Martin&size=100&background=0d6efd&color=fff&bold=true" 
                                 class="rounded-circle mb-3" 
                                 alt="Photo de profil"
-                             width="100" 
-                             height="100">
+                                width="100" 
+                                height="100">
                         
-                        <h5 class="card-title mb-1">{{ auteur.nom }}</h5>
+                        <h5 class="card-title mb-1">{{ auteur.prenom }} {{ auteur.nom }}</h5>
                         <p class="text-muted mb-0">
                             <i class="bi bi-geo-alt-fill me-1"></i>{{ auteur.pays }}
                         </p>
