--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -12,16 +12,19 @@
                 <li class="nav-item">
                 <a class="nav-link" href="{{path('app_about')}}">About Us</a>
                 </li>
-                <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="{{path('app_service')}}">Service</a></li>
-                    <li><a class="dropdown-item" href="{{path('app_contact')}}">Contact</a></li>
-                    <li><a class="dropdown-item" href="{{path('app_auteur')}}">Auteurs</a></li>
-                </ul>
+
+                <li class="nav-item">
+                <li><a class="nav-link" href="{{path('app_service')}}">Service</a></li>
                 </li>
+
+                <li class="nav-item">
+                <li><a class="nav-link" href="{{path('app_contact')}}">Contact</a></li>
+                </li>
+
+                <li class="nav-item">
+                <li><a class="nav-link" href="{{path('app_auteur')}}">Auteurs</a></li>
+                </li>
+
             </ul>
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
