Fix author image source in show template to use dynamic data for profile picture

--- a/templates/auteur/show.html.twig
+++ b/templates/auteur/show.html.twig
@@ -12,7 +12,7 @@ Detail - {{ parent() }}
                 
                 <div class="card shadow-sm" style="max-width: 300px;">
                     <div class="card-body text-center p-4">
-                        <img src="https://ui-avatars.com/api/?name=Sophie+Martin&size=100&background=0d6efd&color=fff&bold=true" 
+                        <img src="https://ui-avatars.com/api/?name={{ auteur.prenom }}+{{ auteur.nom }}&size=100&background=0d6efd&color=fff&bold=true" 
                                 class="rounded-circle mb-3" 
                                 alt="Photo de profil"
                                 width="100" 
