feat: add Product management with fixtures and views
- Added ProductController with index and show actions.
- Created Product and Brand fixtures for testing.
- Updated navbar to include a link to the Products page.
- Added product listing and detail views in Twig templates.
- Registered DoctrineFixturesBundle for development and testing environments.

--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -25,6 +25,10 @@
                 <li><a class="nav-link" href="{{path('app_auteur')}}">Auteurs</a></li>
                 </li>
 
+                <li class="nav-item">
+                <li><a class="nav-link" href="{{path('app_product')}}">Products</a></li>
+                </li>
+
             </ul>
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
