--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -29,6 +29,10 @@
                 <li><a class="nav-link" href="{{path('app_product')}}">Products</a></li>
                 </li>
 
+                <li class="nav-item">
+                <li><a class="nav-link" href="{{path('app_brand')}}">Marques</a></li>
+                </li>
+
             </ul>
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
