--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -7,8 +7,11 @@
 
     <ul>
         {% for product in products %}
-            <li>
-                <a href="{{ path('app_product_show', {'id': product.id}) }}">{{ product.titre }}</a>
+            <li class="card text-bg-dark text-center" style="width: 30%; margin-bottom: 20px;">
+                <div class="card-body" style="display: flex; justify-content: space-between;">
+                    <img src="{{product.imageName}}" alt="{{product.titre}}" width="100">
+                    <a href="{{ path('app_product_show', {'id': product.id}) }}" class="btn btn-primary">{{ product.titre }}</a>
+                </div>
             </li>
         {% endfor %}
     </ul>
