--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -19,6 +19,7 @@ Detail - {{ parent() }}
                 <p class="card-text">{{ product.prix }}€</p>
                 <p class="card-text">Stock : {{ product.stock }}</p>
 
+                <a href="{{ path('app_product') }}" class="btn btn-primary">Retour au catalogue</a>
                 <button class="btn btn-primary">Modifier</button>
                 <button class="btn btn-primary">Supprimer</button>
             </div>
