feat: update translation configuration to set default locale to French; enhance Product entity with validation constraints and slug generation; improve product index template to display price

--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -10,6 +10,7 @@
             <li class="card text-bg-dark text-center" style="width: 30%; margin-bottom: 20px;">
                 <div class="card-body" style="display: flex; justify-content: space-between;">
                     <img src="{{product.imageName}}" alt="{{product.titre}}" width="100">
+                    <p>{{product.prix}}€</p>
                     <a href="{{ path('app_product_show', {'id': product.id}) }}" class="btn btn-primary">{{ product.titre }}</a>
                 </div>
             </li>
