--- a/templates/product/new.html.twig
+++ b/templates/product/new.html.twig
@@ -16,6 +16,12 @@ Detail - {{ parent() }}
         </div>
 
         <div class="m-3">
+        {{form_label(form.marque, 'Marque du produit', {'label_attr': {'class': 'text-primary fw-bold'}})}}
+        {{form_widget(form.marque)}}
+        {{form_errors(form.marque)}}
+        </div>
+
+        <div class="m-3">
         {{form_label(form.description, 'Titre de la description', {'label_attr': {'class': 'text-primary fw-bold'}})}}
         {{form_widget(form.description)}}
         {{form_errors(form.description)}}
