--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -33,6 +33,22 @@
                 <li><a class="nav-link" href="{{path('app_brand')}}">Marques</a></li>
                 </li>
 
+
+                {% if brands and brands|length > 0 %}
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Les marques
+                    </a> 
+
+                    <ul class="dropdown-menu">
+                    {% for brand in brands %}
+                        <li><a class="dropdown-item" href="{{ path('app_brand_show', {'id':brand.id}) }}">{{ brand.brandName }}</a></li>
+                        <li><hr class="dropdown-divider"></li>
+
+                    {% endfor %}
+                    </ul>
+                </li>
+                {% endif %}
             </ul>
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
